--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>產品網站</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to bottom, #2c3e50, #34495e); /* 月光背景 */
+            color: #ecf0f1;
             margin: 0;
             padding: 0;
+            line-height: 1.6;
         }
         header, footer {
-            background-color: #4A4A4A;
-            color: white;
+            background-color: #2c3e50;
+            color: #ecf0f1;
             text-align: center;
             padding: 20px;
         }
@@ -22,24 +23,36 @@
             padding: 20px;
             max-width: 800px;
             margin: 0 auto;
+            background-color: rgba(255, 255, 255, 0.1); /* 半透明背景 */
+            border-radius: 8px;
         }
         section {
             margin-bottom: 40px;
         }
         h1, h2 {
-            color: #4A4A4A;
+            color: #ecf0f1;
         }
         input[type="text"], textarea {
             width: 100%;
             padding: 10px;
             margin: 10px 0;
+            border: 1px solid #ecf0f1;
+            border-radius: 4px;
+            background: #34495e;
+            color: #ecf0f1;
         }
         input[type="submit"] {
             padding: 10px 20px;
-            background-color: #4A4A4A;
+            background-color: #1abc9c;
             color: white;
             border: none;
+            border-radius: 4px;
             cursor: pointer;
+        }
+        form {
+            background: rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            border-radius: 8px;
         }
     </style>
 </head>
